# clarion

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  clippy.toml  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/clarion-cli/: Cargo.toml
crates/clarion-cli/src/: analyze.rs  cli.rs  install.rs  main.rs  stats.rs
crates/clarion-cli/tests/: analyze.rs  install.rs  wp1_e2e.rs  wp2_analyze.rs  wp2_e2e.rs
crates/clarion-core/: Cargo.toml
crates/clarion-core/src/: entity_id.rs  lib.rs  llm_provider.rs
crates/clarion-core/src/plugin/: breaker.rs  discovery.rs  host.rs  jail.rs  limits.rs  manifest.rs  mock.rs  mod.rs  protocol.rs  transport.rs
crates/clarion-core/tests/: host_subprocess.rs
crates/clarion-core/tests/fixtures/: plugin.toml  sample.mt
crates/clarion-plugin-fixture/: Cargo.toml
crates/clarion-plugin-fixture/src/: lib.rs  main.rs
crates/clarion-storage/: Cargo.toml
crates/clarion-storage/migrations/: 0001_initial_schema.sql
crates/clarion-storage/src/: commands.rs  error.rs  lib.rs  pragma.rs  reader.rs  schema.rs  writer.rs
crates/clarion-storage/tests/: reader_pool.rs  schema_apply.rs  writer_actor.rs
docs/: README.md  loom.md  suite-briefing.md
docs/clarion/: README.md
docs/clarion/adr/: ADR-001-rust-for-core.md  ADR-002-plugin-transport-json-rpc.md  ADR-003-entity-id-scheme.md  ADR-004-finding-exchange-format.md  ADR-005-clarion-dir-tracking.md  ADR-006-clustering-algorithm.md  ADR-007-summary-cache-key.md  ADR-011-writer-actor-concurrency.md  ADR-012-http-auth-default.md  ADR-013-pre-ingest-secret-scanner.md  ADR-014-filigree-registry-backend.md  ADR-015-wardline-filigree-emission.md  ADR-016-observation-transport.md  ADR-017-severity-and-dedup.md  ADR-018-identity-reconciliation.md  ADR-021-plugin-authority-hybrid.md  ADR-022-core-plugin-ontology.md  ADR-023-tooling-baseline.md  ADR-024-guidance-schema-vocabulary.md  ADR-025-minor-shared-standards.md  ADR-026-containment-wire-and-edge-identity.md  ADR-027-ontology-version-semver.md  ADR-028-edge-confidence-tiers.md  ADR-029-entity-associations-binding.md  ADR-030-on-demand-summary-scope.md  README.md
docs/clarion/v0.1/: README.md  detailed-design.md  requirements.md  system-design.md
docs/clarion/v0.1/plans/: docs-restructure-plan.md  post-commitment-work-brief.md  v0.1-scope-commitments.md
docs/clarion/v0.1/reviews/: README.md  design-review.md  integration-recon.md
docs/clarion/v0.1/reviews/panel-2026-04-17/: 00-executive-synthesis.md  01-structure.md  02-doc-critique.md  03-editorial.md  04-self-sufficiency.md  05-link-integrity.md  06-architecture-critique.md  07-adr-review.md  08-debt.md  09-threat-model.md  10-panel-config.yaml  11-doctrine-panel-synthesis.md
docs/clarion/v0.1/reviews/panel-2026-04-17/reader-journals/: p1-infra-skeptic-00-orientation.md  p1-infra-skeptic-step-a-briefing.md  p1-infra-skeptic.md  p2-cto-evaluator-overall-verdict.md  p2-cto-evaluator-step-a-briefing.md  p2-cto-evaluator-step-a-loom.md  p2-cto-evaluator.md  p3-compliance-eng.md  p4-oss-contributor.md  p5-competing-author.md
docs/clarion/v0.1/reviews/panel-2026-04-17/reader-journals/p3-compliance-eng/: 00-suite-orientation.md  01-briefing-step-a.md  (+3 more)
docs/clarion/v0.1/reviews/pre-restructure/: design-review.md  integration-recon.md
docs/implementation/: README.md  v0.1-plan.md
docs/implementation/sprint-1/: README.md  signoffs.md  wp1-scaffold.md  wp2-plugin-host.md  wp3-python-plugin.md
docs/implementation/sprint-2/: b2-class-module-entities.md  b3-contains-edges.md  b4-calls-edges.md  b4-gate-results.md  b8-scale-test.md  scope-amendment-2026-05.md
docs/suite/: README.md  briefing.md  glossary.md  loom.md
docs/superpowers/handoffs/: 2026-04-18-wp2-plugin-host-handoff.md  2026-04-19-wp2-tasks-4-to-9-handoff.md  2026-04-23-wp2-full-scrub-handoff.md  2026-04-23-wp2-scrub-findings.md  2026-04-24-post-wp2-scrub-handoff.md  2026-04-30-sprint-2-kickoff.md  2026-05-03-skeleton-audit.md  2026-05-16-sprint-2-resume.md
docs/superpowers/plans/: 2026-04-18-wp1-scaffold-storage.md  2026-04-18-wp2-plugin-host.md  2026-05-05-b2-class-module-entities.md
docs/superpowers/specs/: 2026-04-17-clarion-docs-restructure-design.md  2026-04-17-clarion-integration-recon.md  2026-04-17-clarion-v0.1-design-review.md  2026-04-17-clarion-v0.1-design.md  2026-04-17-clarion-v0.1-detailed-design.md  2026-04-17-clarion-v0.1-requirements.md  2026-04-17-clarion-v0.1-system-design.md
fixtures/: entity_id.json
plugins/python/: README.md  plugin.toml  pyproject.toml
plugins/python/src/clarion_plugin_python/: __init__.py  __main__.py  call_resolver.py  entity_id.py  extractor.py  pyright_session.py  qualname.py  server.py  stdout_guard.py  wardline_probe.py
plugins/python/tests/: test_entity_id.py  test_extractor.py  test_package.py  test_pyright_session.py  test_qualname.py  test_round_trip.py  test_server.py  test_stdout_guard.py  test_wardline_probe.py
scripts/: b4-gate-run.sh  check-b4-gate-result.py
tests/e2e/: sprint_1_walking_skeleton.sh
tests/perf/: README.md
tests/perf/elspeth_mini/elspeth/: cli.py  cli_formatters.py  cli_helpers.py
tests/perf/elspeth_mini/elspeth/composer_mcp/: audit.py  server.py  session.py
tests/perf/elspeth_mini/elspeth/contracts/: __init__.py  advisory_locks.py  audit.py  audit_protocols.py  auth.py  cli.py  composer_audit.py  composer_llm_audit.py  composer_slots.py  contexts.py  contract_propagation.py  discriminated.py  engine.py  enums.py  errors.py  events.py  export_records.py  field_collision.py  plugin_context.py  plugin_protocols.py  plugin_semantics.py  results.py  routing.py  run_result.py  schema.py  secrets.py
tests/perf/elspeth_mini/elspeth/contracts/config/: runtime.py
tests/perf/elspeth_mini/elspeth/engine/orchestrator/: core.py
tests/perf/elspeth_mini/elspeth/plugins/sources/: csv_source.py  dataverse.py  json_source.py
tests/perf/elspeth_mini/elspeth/web/execution/: protocol.py  routes.py
tests/perf/elspeth_mini/elspeth/web/sessions/: protocol.py
tests/perf/synthetic/deep/nested/pkg/: workflow.py
