[workspace]
resolver = "3"
members = [
    "crates/clarion-core",
    "crates/clarion-storage",
    "crates/clarion-cli",
]

[workspace.package]
version = "0.1.0-dev"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/qacona/clarion"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Pragmatic allows per ADR-023 — revisit per WP if the floor gets too loud.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
deadpool-sqlite = { version = "0.8", features = ["rt_tokio_1"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
assert_cmd = "2"
tempfile = "3"
nix = { version = "0.28", default-features = false, features = ["resource"] }
