[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clarion-plugin-python"
version = "0.1.3"
description = "Clarion Python language plugin — walking-skeleton v0.1 baseline"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "John Morrissey", email = "qacona@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "packaging>=24",
    "pyright==1.1.409",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[project.scripts]
clarion-plugin-python = "clarion_plugin_python.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clarion_plugin_python"]

[tool.hatch.build.targets.wheel.shared-data]
# Route plugin.toml into <install-prefix>/share/clarion/plugins/<suffix>/ so
# WP2's L9 install-prefix fallback finds it. The <suffix> is produced by
# `discovery.rs::strip_prefix("clarion-plugin-")` on the binary name, so for
# clarion-plugin-python the suffix is "python" — the target directory must
# match that basename exactly.
"plugin.toml" = "share/clarion/plugins/python/plugin.toml"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # pydocstyle relaxed per ADR-023
    "COM812", # conflicts with ruff format
    "ISC001", # conflicts with ruff format
    "CPY",    # copyright headers are not our convention
    "ANN401", # Any is legitimate for JSON-RPC payload fields (shape is open)
    "TRY003", # short composed exception messages are fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",    # assert is the whole point of tests
    "PLR2004", # magic numbers are fine in test expectations
    "ANN",     # type annotations optional in tests
    "INP001",  # tests/ is a namespace package
    "S108",    # hard-coded /tmp paths are test fixtures, not real I/O
    "E501",    # long assert messages in test failures are fine
]

[tool.ruff.lint.mccabe]
# Dispatch loops naturally exceed the default 10; 15 matches our Rust clippy.toml.
max-complexity = 15

[tool.ruff.lint.pylint]
max-returns = 10
max-branches = 15

[tool.ruff.format]
# defaults: double quotes, space indent, trailing commas where appropriate

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --cov=clarion_plugin_python --cov-report=term-missing"
pythonpath = ["src"]
markers = [
    "pyright: requires pyright-langserver on PATH or in the active virtualenv",
    "slow: exercises subprocess or scale behavior that is slower than unit tests",
]
